tests/ui/force-inlining/deny.stderr
error: `callee` could not be inlined into `caller` but is required to be inlined
  --> $DIR/deny.rs:19:5
   |
LL |     callee();
   |     ^^^^^^^^ ...`callee` called here
   |
   = note: could not be inlined due to: #[rustc_no_mir_inline]

error: `callee_justified` could not be inlined into `caller` but is required to be inlined
  --> $DIR/deny.rs:22:5
   |
LL |     callee_justified();
   |     ^^^^^^^^^^^^^^^^^^ ...`callee_justified` called here
   |
   = note: could not be inlined due to: #[rustc_no_mir_inline]
   = note: `callee_justified` is required to be inlined to: the test requires it

error: aborting due to 2 previous errors

